syntax = "proto3";

package pb;

import "google/api/annotations.proto";

import "rpc_create_schedule.proto"; 

import "protoc-gen-openapiv2/options/annotations.proto";
option go_package = "github.com/ofagbola/Editor-RPM-Backend/scheduler/pb";


option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "Editor RPM Scheduler API Service";
        version: "1.0";
        contact: {
            name: "EvonMedics LLC";
            url: "https://github.com/EvonMedicsLLC";
            email: "it@evonmedics.org";
        };
    };
};

service SchedulerService { 
    rpc CreateSchedule (CreateScheduleRequest) returns (CreateScheduleResponse) {
        option (google.api.http) = {
            post: "/v1/create_Schedule"
            body: "*"
        };
            option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to create a new Schedule";
            summary: "Create new Schedule";
        };
     }
}